tests/ui/premature_event_namespace.stderr
error[E0432]: unresolved import `moirai::event::EventReader`
 --> tests/ui/premature_event_namespace.rs:1:5
  |
1 | use moirai::event::EventReader;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ no `EventReader` in `event`

error[E0603]: module `event` is private
 --> tests/ui/premature_event_namespace.rs:1:13
  |
1 | use moirai::event::EventReader;
  |             ^^^^^ private module
  |
note: the module `event` is defined here
 --> src/lib.rs
  |
  | mod event;
  | ^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/premature_event_namespace.rs:1:32
  |
1 | use moirai::event::EventReader;
  |                                ^ consider adding a `main` function to `$DIR/tests/ui/premature_event_namespace.rs`
